- Alignment fixes - Removed old css classes

--- a/frontend/src/app/pages/tablet/cell/cell.component.scss
+++ b/frontend/src/app/pages/tablet/cell/cell.component.scss
@@ -41,9 +41,11 @@
         width: 100%;
         height: 100%;
 
+        display: flex;
+        justify-content: center;
+        align-items: center;
       .middle-alignment{
-        position: relative;
-        top: 150px;
+
         margin: auto;
         text-align: center;
         width: 90%;
