--- a/frontend/src/app/pages/tablet/tablet.component.scss
+++ b/frontend/src/app/pages/tablet/tablet.component.scss
@@ -57,34 +57,8 @@
           background: #6990B5;
           border-radius: 10px;
           color: #000000;
-        }      
+        }
       }
-
-      .grid-button{
-        position: absolute;
-        bottom: 5px;
-        right: 5px;
-
-        display: flex;
-        width: 135px;
-        height: 49px;
-        background: #6990B5;
-        border-radius: 10px;
-        align-items: center;
-        justify-content: center;
-
-        p{
-          flex-grow: 3;
-          margin: 0;
-        }
-        img {
-          align-self: flex-start;
-          height: 38px;
-        }
-      
-    }
-    
-
 }
 
 
